use LinkedList instead of List for using first/last element